--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "auth0": "^2.9.1",
     "axios": "^0.16.2",
     "express-session": "^1.15.6",
     "google-maps-react": "^2.0.0",
