--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "auth0-js": "^9.5.0",
-    "axios": "^0.16.2",
-    "body-parser": "^1.17.2",
-    "express": "^4.15.4",
-    "google-maps-react": "^2.0.0",
-    "mongoose": "^5.0.11"
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.2",
+    "concurrently": "^3.5.1",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "mongodb": "^3.0.7",
+    "mongoose": "^5.0.16",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
