--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.0.0",
     "react-iframe": "^1.1.0",
+    "react-modal": "^3.4.4",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.14"
   },
